Updated swagger specs. Added auth header param in handler comments
